--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -18,12 +18,12 @@
             <h1 class="display-4 logo-font text-black">
                 It works
             </h1>
-            <!-- <div class="my-5">
+            <div class="my-5">
                 <h4>
                     <a href="" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop
                         Now</a>
                 </h4>
-            </div> -->
+            </div>
         </div>
     </div>
 </div>
