Add products app and add categroy and product models to database

--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -4,6 +4,48 @@
             <a class="logo-font font-weight-bold nav-link text-black mr-5" href="{% url 'home' %}" id="home-link">
                 Home
             </a>
+            <hr class="w-50 float-left m-0">
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="hardware-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Hardware
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="hardware-link">
+                <a href="" class="dropdown-item">Surfboards</a>
+                <a href="" class="dropdown-item ">Paddleboards</a>
+                <a href="" class="dropdown-item ">Accessories</a>
+                <a href="" class="dropdown-item">Wetsuits</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="clothing-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Clothing
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
+                <a href="" class="dropdown-item">Jackets</a>
+                <a href="" class="dropdown-item ">Hoodies / Knitwear</a>
+                <a href="" class="dropdown-item ">Jeans / Trousers</a>
+                <a href="" class="dropdown-item">Footwear</a>
+                <a href="" class="dropdown-item">Beach</a>
+            </div>
+        </li>
+
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="outdoor-lifestyle-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Outdoor / Lifestyle
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="outdoor-lifestyle-link">
+                <a href="" class="dropdown-item">Jackets</a>
+                <a href="" class="dropdown-item ">Hoodies / Knitwear</a>
+                <a href="" class="dropdown-item ">Jeans / Trousers</a>
+                <a href="" class="dropdown-item">Footwear</a>
+                <a href="" class="dropdown-item">Beach</a>
+            </div>
         </li>
 
     </ul>
