--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -14,7 +14,7 @@
 {% block content %}
 <div class="container h-100">
     <div class="row h-100">
-        <div class="col-7 col-md-6 my-auto">
+        <div class="col-12 my-auto pb-5 text-center">
             <h1 class="display-4 logo-font text-black">
                 It works
             </h1>
