--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,7 +10,7 @@
 {% endblock %}
 
 {% block content %}
-<!-- <div class="overlay"></div> -->
+<div class="overlay"></div>
 <div class="container-fluid">
     <div class="row">
         <div class="col text-center mt-3">
@@ -58,12 +58,7 @@
                                     {% else %}
                                     <small class="text-muted">No Rating</small>
                                     {% endif %}
-                                    {% if request.user.is_superuser %}
-                                    <small class="ml-3">
-                                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                    </small>
-                                    {% endif %}
+
                                 </div>
                             </div>
                         </div>
