--- a/static/css/base.css
+++ b/static/css/base.css
@@ -3,7 +3,7 @@ html {
 }
 
 body {
-    background: url('/media/will-truettner-Rk-JT2OypZA-unsplash.jpg') no-repeat center center fixed;
+    background: url('{{ MEDIA_URL }}will-truettner-Rk-JT2OypZA-unsplash.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
