--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -15,13 +15,13 @@
 <div class="container h-100">
     <div class="row h-100">
         <div class="col-12 my-auto pb-5 text-center">
-            <h1 class="display-4 logo-font text-black">
-                It works
-            </h1>
+            <!-- <h1 class="display-4 logo-font text-black">
+                Adventure starts here
+            </h1> -->
             <div class="my-5">
                 <h4>
-                    <a href="{% url 'products' %}" class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Shop
-                        Now</a>
+                    <a href="{% url 'products' %}"
+                        class="shop-now-button btn btn-lg rounded-0 text-uppercase py-3">Browse The Store</a>
                 </h4>
             </div>
         </div>
