--- a/templates/base.html
+++ b/templates/base.html
@@ -48,20 +48,20 @@
 <body>
   <header class="container-fluid fixed-top">
     <div id="topnav" class="row bg-white pt-lg-2 d-none d-lg-flex">
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0 text-center text-lg-left">
+      <div class="col-12 col-lg-3 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <h2 class="logo-font text-black my-0">
             <strong>Sea </strong>& <strong>Shore</strong>
           </h2>
         </a>
       </div>
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+      <div class="col-12 col-lg-6 my-auto py-1 py-lg-0">
         <form method="GET" action="{% url 'products' %}">
           <div class="input-group w-100">
             <input class="form-control border border-black rounded-0" type="text" name="q"
               placeholder="Search our site">
             <div class="input-group-append">
-              <button class="form-control btn btn-black border border-black rounded-0" type="submit">
+              <button class="form-control btn  border border-black rounded-0" type="submit">
                 <span class="icon">
                   <i class="fas fa-search"></i>
                 </span>
@@ -70,16 +70,16 @@
           </div>
         </form>
       </div>
-      <div class="col-12 col-lg-4 my-auto py-1 py-lg-0">
+      <div class="col-12 col-lg-3 my-auto py-1 py-lg-0">
         <ul class="list-inline list-unstyled text-center text-lg-right my-0">
           <li class="list-inline-item dropdown">
             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center">
                 <div>
-                  <i class="fas fa-user fa-lg"></i>
+                  <i class="fas fa-user fa-2x"></i>
                 </div>
-                <p class="my-0">My Account</p>
+                <!-- <p class="my-0">My Account</p> -->
               </div>
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -96,19 +96,29 @@
             </div>
           </li>
           <li class="list-inline-item">
+            <a class="text-black nav-link" href="">
+              <div class="text-center">
+                <div>
+                  <i class="fas fa-star fa-2x"></i>
+                </div>
+                <!-- <p class="my-0">Wishlist</p> -->
+              </div>
+            </a>
+          </li>
+          <li class="list-inline-item">
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
               href="{% url 'view_bag' %}">
               <div class="text-center">
                 <div>
-                  <i class="fas fa-shopping-bag fa-lg"></i>
+                  <i class="fas fa-shopping-bag fa-2x"></i>
                 </div>
-                <p class="my-0">
+                <!-- <p class="my-0">
                   {% if grand_total %}
                   £{{ grand_total|floatformat:2 }}
                   {% else %}
                   £0.00
                   {% endif %}
-                </p>
+                </p> -->
               </div>
             </a>
           </li>
@@ -166,6 +176,7 @@
   <script type="text/javascript">
     $('.toast').toast('show');
   </script>
+  <script src="{% static 'js/nav.js' %}"></script>
   {% endblock %}
 
 </body>
