--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -5,7 +5,7 @@
             <div>
                 <i class="fas fa-search fa-lg"></i>
             </div>
-            <p class="my-0">Search</p>
+            <!-- <p class="my-0">Search</p> -->
         </div>
     </a>
     <div class="dropdown-menu border-0 w-100 p-3 rounded-0 my-0" aria-labelledby="mobile-search">
@@ -16,7 +16,7 @@
                 <div class="input-group-append">
                     <button class="form-control form-control btn btn-black border border-black rounded-0" type="submit">
                         <span class="icon">
-                            <i class="fas fa-search"></i>
+                            <i class="fas fa-search fa-lg"></i>
                         </span>
                     </button>
                 </div>
@@ -31,7 +31,7 @@
             <div>
                 <i class="fas fa-user fa-lg"></i>
             </div>
-            <p class="my-0">Account</p>
+            <!-- <p class="my-0">Account</p> -->
         </div>
     </a>
     <div class="dropdown-menu border-0" aria-labelledby="user-options">
@@ -48,19 +48,29 @@
     </div>
 </li>
 <li class="list-inline-item">
+    <a class="text-black nav-link d-block d-lg-none" href="">
+        <div class="text-center">
+            <div>
+                <i class="fas fa-star fa-lg"></i>
+            </div>
+            <!-- <p class="my-0">Wishlist</p> -->
+        </div>
+    </a>
+</li>
+<li class="list-inline-item">
     <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
         href="{% url 'view_bag' %}">
         <div class="text-center">
             <div>
                 <i class="fas fa-shopping-bag fa-lg"></i>
             </div>
-            <p class="my-0">
+            <!-- <p class="my-0">
                 {% if grand_total %}
-                ${{ grand_total|floatformat:2 }}
+                £{{ grand_total|floatformat:2 }}
                 {% else %}
-                $0.00
+                £0.00
                 {% endif %}
-            </p>
+            </p> -->
         </div>
     </a>
 </li>
