--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -52,16 +52,18 @@
                 <form class="form" action="{% url 'add_to_bag' product.id %}" method="POST">
                     {% csrf_token %}
                     <div class="form-row">
-                        {% with product.has_sizes as s %}
-                        {% if s %}
+
+
+                        {% if product.productvariations_set.all %}
                         <div class="col-12">
                             <p><strong>Size:</strong></p>
                             <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
-                                <option value="xs">XS</option>
-                                <option value="s">S</option>
-                                <option value="m" selected>M</option>
-                                <option value="l">L</option>
-                                <option value="xl">XL</option>
+                                {% for variation in product.productvariations_set.all %}
+
+                                <option value="{{ variation.name }}">{{ variation.name }}</option>
+
+                                {% endfor %}
+
                             </select>
                         </div>
                         {% endif %}
@@ -107,7 +109,7 @@
                                     value="Add to Bag">
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
-                            {% endwith %}
+
                         </div>
                 </form>
             </div>
