--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -60,8 +60,8 @@
                                 <ul class="list-unstyled">
                                     {% for item in order.lineitems.all %}
                                     <li class="small">
-                                        {% if item.product.has_sizes %}
-                                        Size {{ item.product.size|upper }}
+                                        {% if item.product.productvariations_set.all %}
+                                        Size {{ item.product_size|capfirst }}
                                         {% endif %}{{ item.product.name }} x{{ item.quantity }}
                                     </li>
                                     {% endfor %}
