--- a/static/css/base.css
+++ b/static/css/base.css
@@ -289,6 +289,10 @@ input[name='q']::placeholder {
     display: block;
   } */
 
+.variations-table {
+    border-top: none !important;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
