--- a/products/templates/products/add_product_variation.html
+++ b/products/templates/products/add_product_variation.html
@@ -16,9 +16,18 @@
         <div class="col-12 col-md-6">
             <hr>
             <h2 class="logo-font mb-4">Product Management</h2>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-12 col-md-6">
             <h5 class="text-muted">Add Product Variation</h5>
             <hr>
         </div>
+        <div class="d-none d-md-block col-md-6">
+            <h5 class="text-muted">Product Variations</h5>
+            <hr>
+        </div>
+
     </div>
 
     <div class="row">
@@ -48,12 +57,17 @@
         </form>
 
         <div class="col-12 col-md-6">
+
+            <h5 class="text-muted d-md-none">Product Variations</h5>
+            <hr class="d-md-none">
+
             {% if product.productvariations_set.all %}
             <table class="table table-sm">
                 <thead>
                     <tr>
                         <th>Catergory</th>
                         <th>Variation</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -65,6 +79,10 @@
 
                         <td>
                             {{ var.name|capfirst }}
+                        </td>
+
+                        <td>
+                            <a class="text-danger" href="{% url 'delete_product_variation' var.id %}">Delete</a>
                         </td>
 
                     </tr>
