Add wishlist app and model

--- a/templates/base.html
+++ b/templates/base.html
@@ -96,7 +96,7 @@
             </div>
           </li>
           <li class="list-inline-item">
-            <a class="text-black nav-link" href="">
+            <a class="text-black nav-link" href="{% url 'wishlist' %}">
               <div class="text-center">
                 <div>
                   <i class="fas fa-star fa-2x"></i>
