--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -107,11 +107,19 @@
                                 </a>
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
                                     value="Add to Bag">
+
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
 
                         </div>
                 </form>
+                <a href="{% url 'add_to_wishlist' product.id %}" id="wishlist_{{ product.id }}"
+                    class="btn btn-outline-black rounded-0 mt-5 wishlist-toggle">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span class="text-uppercase">Add to wishlist</span>
+                </a>
             </div>
         </div>
     </div>
