--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,67 +65,9 @@
             </div>
             <div class="row">
                 {% for product in products %}
-                <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-                    <div class="card h-100 product-card bg-white-op">
-                        {% if product.image %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                        </a>
-                        {% else %}
-                        <a href="{% url 'product_detail' product.id %}">
-                            <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png"
-                                alt="{{ product.name }}">
-                        </a>
-                        {% endif %}
-                        <div class="card-body pb-0">
-                            <p class="mb-0">{{ product.name }}</p>
-                        </div>
-                        <div class="card-footer bg-white-op pt-0 border-0 text-left">
-                            <div class="row">
-                                <div class="col-8">
-                                    <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                                    {% if product.category %}
-                                    <p class="small mt-1 mb-0">
-                                        <a class="text-muted"
-                                            href="{% url 'products' %}?category={{ product.category.name }}">
-                                            <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                        </a>
-                                    </p>
-                                    {% endif %}
-                                    {% if product.rating %}
-                                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} /
-                                        5</small>
-                                    {% else %}
-                                    <small class="text-muted">No Rating</small>
-                                    {% endif %}
-                                    {% if request.user.is_superuser %}
-                                    <br>
-                                    <small class="ml-3">
-                                        <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                        <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                                    </small>
-                                    {% endif %}
 
-                                </div>
-                                <div class="col-4 d-flex align-items-center justify-content-center">
-                                    <a href="{% url 'add_to_wishlist' product.id %}">
-                                        {% if product not in request.user.userwishlist.products.all %}
-                                        <div class="text-black wishlist-icon" title="Add to wishlist">
-                                            <i class="far fa-star fa-3x"></i>
-                                        </div>
-                                        {% else %}
-                                        <div class="text-black wishlist-icon" title="Remove from wishlist">
-                                            <i class="fas fa-star fa-3x"></i>
-                                        </div>
-                                        {% endif %}
+                {% include "products/includes/product_card.html" %}
 
-                                        <!-- <span class="text-uppercase">Add to wishlist</span> -->
-                                    </a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
                 {% if forloop.counter|divisibleby:1 %}
                 <div class="col-12 d-sm-none mb-5">
                     <hr>
