--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -26,51 +26,11 @@
         </div>
     </div>
     <div class="row">
-        {% if wishlist.products.all %}
-        {% for product in wishlist.products.all %}
-        <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
-            <div class="card h-100 product-card bg-white-op">
-                {% if product.image %}
-                <a href="{% url 'product_detail' product.id %}">
-                    <img class="card-img-top img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                </a>
-                {% else %}
-                <a href="{% url 'product_detail' product.id %}">
-                    <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
-                </a>
-                {% endif %}
-                <div class="card-body pb-0">
-                    <p class="mb-0">{{ product.name }}</p>
-                </div>
-                <div class="card-footer bg-white-op pt-0 border-0 text-left">
-                    <div class="row">
-                        <div class="col">
-                            <p class="lead mb-0 text-left font-weight-bold">£{{ product.price }}</p>
-                            {% if product.category %}
-                            <p class="small mt-1 mb-0">
-                                <a class="text-muted" href="{% url 'products' %}?category={{ product.category.name }}">
-                                    <i class="fas fa-tag mr-1"></i>{{ product.category.friendly_name }}
-                                </a>
-                            </p>
-                            {% endif %}
-                            {% if product.rating %}
-                            <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} /
-                                5</small>
-                            {% else %}
-                            <small class="text-muted">No Rating</small>
-                            {% endif %}
-                            {% if request.user.is_superuser %}
-                            <small class="ml-3">
-                                <a href="{% url 'edit_product' product.id %}">Edit</a> |
-                                <a class="text-danger" href="{% url 'delete_product' product.id %}">Delete</a>
-                            </small>
-                            {% endif %}
+        {% if wishlist_items %}
+        {% for product in wishlist_items %}
 
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        {% include "products/includes/product_card.html" %}
+
         {% if forloop.counter|divisibleby:1 %}
         <div class="col-12 d-sm-none mb-5">
             <hr>
