--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,7 @@
   {% block extra_meta %}{% endblock %}
 
   {% block corecss %}
+  <link rel="icon" type="image/png" href="media/favicon.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
     integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,7 +52,8 @@
       <div class="col-12 col-lg-3 my-auto py-1 py-lg-0 text-center text-lg-left">
         <a href="{% url 'home' %}" class="nav-link main-logo-link">
           <h2 class="logo-font text-black my-0">
-            <strong>Sea </strong>& <strong>Shore</strong>
+            <strong>Sea
+            </strong>& <strong>Shore</strong>
           </h2>
         </a>
       </div>
