Add related name to product variation model product field

--- a/bag/templates/bag/product-info.html
+++ b/bag/templates/bag/product-info.html
@@ -1,4 +1,4 @@
 <p class="my-0"><strong>{{ item.product.name }}</strong></p>
 <p class="my-0"><strong>Size:
-    </strong>{% if item.product.productvariations_set.all %}{{ item.size|capfirst }}{% else %}N/A{% endif %}</p>
+    </strong>{% if item.product.variations.all %}{{ item.size|capfirst }}{% else %}N/A{% endif %}</p>
 <p class="my-0 small text-muted">Code: {{ item.product.code }}</p>
