--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -54,11 +54,11 @@
                     <div class="form-row">
 
 
-                        {% if product.productvariations_set.all %}
+                        {% if product.variations.all %}
                         <div class="col-12">
                             <p><strong>Size:</strong></p>
                             <select class="form-control rounded-0 w-50" name="product_size" id='id_product_size'>
-                                {% for variation in product.productvariations_set.all %}
+                                {% for variation in product.variations.all %}
 
                                 <option value="{{ variation.name }}">{{ variation.name }}</option>
 
@@ -98,7 +98,7 @@
                                 </div>
                             </div>
 
-                            <div class="col{% if s %}-12 mt-2{% endif %}">
+                            <div class="col{% if s %}-12 mt-2{% endif %} d-flex">
                                 <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 mt-5">
                                     <span class="icon">
                                         <i class="fas fa-chevron-left"></i>
@@ -108,18 +108,27 @@
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
                                     value="Add to Bag">
 
+                                <a href="{% url 'toggle_wishlist' product.id %}" class="mt-5 ml-3">
+                                    {% if  product not in wishlist_items %}
+                                    <div class="text-black wishlist-icon" title="Add to wishlist">
+                                        <i class="far fa-star fa-3x"></i>
+                                    </div>
+                                    {% else %}
+                                    <div class="text-black wishlist-icon" title="Remove from wishlist">
+                                        <i class="fas fa-star fa-3x"></i>
+                                    </div>
+                                    {% endif %}
+
+
+                                </a>
+
+
                             </div>
                             <input type="hidden" name="redirect_url" value="{{ request.path }}">
 
                         </div>
                 </form>
-                <a href="{% url 'add_to_wishlist' product.id %}" id="wishlist_{{ product.id }}"
-                    class="btn btn-outline-black rounded-0 mt-5 wishlist-toggle">
-                    <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span class="text-uppercase">Add to wishlist</span>
-                </a>
+
             </div>
         </div>
     </div>
@@ -129,4 +138,12 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+<script>
+    $('.wishlist-icon').tooltip({
+        show: {
+            effect: "fade",
+            duration: 800
+        }
+    });
+</script>
 {% endblock %}
