--- a/static/css/base.css
+++ b/static/css/base.css
@@ -293,6 +293,10 @@ input[name='q']::placeholder {
     border-top: none !important;
 }
 
+.nav-wrapper {
+    border: none;
+}
+
 /* -------------------------------- Media Queries */
 
 /* Slightly larger container on xl screens */
