--- a/templates/base.html
+++ b/templates/base.html
@@ -75,17 +75,19 @@
         </form>
       </div>
       <div class="col-12 col-lg-3 my-auto py-1 py-lg-0">
-        <ul class="list-inline list-unstyled text-center text-lg-right my-0">
+        <ul class="list-inline list-unstyled text-center text-lg-right my-0 pt-2">
           <li class="list-inline-item dropdown">
+
             <a class="text-black nav-link" href="#" id="user-options" data-toggle="dropdown" aria-haspopup="true"
               aria-expanded="false">
               <div class="text-center">
                 <div>
                   <i class="fas fa-user fa-2x"></i>
                 </div>
-                <!-- <p class="my-0">My Account</p> -->
+                <p class="my-0">Account</p>
               </div>
             </a>
+
             <div class="dropdown-menu border-0" aria-labelledby="user-options">
               {% if request.user.is_authenticated %}
               {% if request.user.is_superuser %}
@@ -100,31 +102,35 @@
             </div>
           </li>
           <li class="list-inline-item">
+
             <a class="text-black nav-link" href="{% url 'wishlist' %}">
               <div class="text-center">
                 <div>
                   <i class="fas fa-star fa-2x"></i>
                 </div>
-                <!-- <p class="my-0">Wishlist</p> -->
+                <p class="my-0">Wishlist</p>
               </div>
             </a>
+
           </li>
           <li class="list-inline-item">
+
             <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link"
               href="{% url 'view_bag' %}">
               <div class="text-center">
                 <div>
                   <i class="fas fa-shopping-bag fa-2x"></i>
                 </div>
-                <!-- <p class="my-0">
+                <p class="my-0">
                   {% if grand_total %}
                   £{{ grand_total|floatformat:2 }}
                   {% else %}
                   £0.00
                   {% endif %}
-                </p> -->
+                </p>
               </div>
             </a>
+
           </li>
         </ul>
       </div>
@@ -181,6 +187,10 @@
     $('.toast').toast('show');
   </script>
   <script src="{% static 'js/nav.js' %}"></script>
+  {% endblock %}
+
+  {% block bagjs %}
+
   {% endblock %}
 
 </body>
