--- a/templates/includes/mobile-top-header.html
+++ b/templates/includes/mobile-top-header.html
@@ -3,7 +3,7 @@
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div>
-                <i class="fas fa-search fa-lg"></i>
+                <i class="fas fa-search fa-2x"></i>
             </div>
             <!-- <p class="my-0">Search</p> -->
         </div>
@@ -29,7 +29,7 @@
         aria-haspopup="true" aria-expanded="false">
         <div class="text-center">
             <div>
-                <i class="fas fa-user fa-lg"></i>
+                <i class="fas fa-user fa-2x"></i>
             </div>
             <!-- <p class="my-0">Account</p> -->
         </div>
@@ -51,18 +51,18 @@
     <a class="text-black nav-link d-block d-lg-none" href="">
         <div class="text-center">
             <div>
-                <i class="fas fa-star fa-lg"></i>
+                <i class="fas fa-star fa-2x"></i>
             </div>
             <!-- <p class="my-0">Wishlist</p> -->
         </div>
     </a>
 </li>
 <li class="list-inline-item">
-    <a class="{% if grand_total %}text-primary font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
+    <a class="{% if grand_total %}text-info font-weight-bold{% else %}text-black{% endif %} nav-link d-block d-lg-none"
         href="{% url 'view_bag' %}">
         <div class="text-center">
             <div>
-                <i class="fas fa-shopping-bag fa-lg"></i>
+                <i class="fas fa-shopping-bag fa-2x"></i>
             </div>
             <!-- <p class="my-0">
                 {% if grand_total %}
