Add product review app, model and template

--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -42,6 +42,8 @@
                 {% else %}
                 <small class="text-muted">No Rating</small>
                 {% endif %}
+                <a href="{% url 'add_product_review' product.id %}">Add review</a>
+                <br>
                 {% if request.user.is_superuser %}
                 <small class="ml-3">
                     <a href="{% url 'edit_product' product.id %}">Edit</a> |
