--- a/products/templates/products/includes/product_card.html
+++ b/products/templates/products/includes/product_card.html
@@ -24,7 +24,7 @@
                     </p>
                     {% endif %}
                     {% if product.rating %}
-                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating }} /
+                    <small class="text-muted"><i class="fas fa-star mr-1"></i>{{ product.rating|floatformat:"1" }} /
                         5</small>
                     {% else %}
                     <small class="text-muted">No Rating</small>
