--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -136,6 +136,36 @@
         </div>
     </div>
 </div>
+
+<div class="row">
+    <div class="col-12">
+        <h2 class="text-center">Reviews</h2>
+    </div>
+</div>
+
+<div class="row">
+
+
+
+    {% for review in product_reviews %}
+    {% if product.name in review.product.name %}
+    <div class="col-sm-6 col-md-6 col-lg-4 col-xl-3">
+        <div class="card" style="">
+            <div class="card-body">
+                <h5 class="card-title">Add review title to model</h5>
+                <h6 class="card-subtitle mb-2 text-muted">{{ review.rating }}</h6>
+                <p class="card-text">{{ review.review }}</p>
+            </div>
+            <div class="card-footer text-muted">
+                {{ review.reviewer }} - add date to model
+            </div>
+        </div>
+    </div>
+    {% endif %}
+    {% endfor %}
+
+</div>
+</div>
 {% endblock %}
 
 {% block postloadjs %}
