--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -10,10 +10,10 @@
 {% endblock %}
 
 {% block content %}
-<!-- <div class="overlay"></div> -->
+<div class="overlay"></div>
 <div class="container-fluid product-container">
     <div class="row">
-        <div class="col text-center mt-3">
+        <div class="col text-center mt-5">
             <h2 class="logo-font">Products</h2>
             {% for c in current_categories %}
             <a class="category-badge text-decoration-none" href="{% url 'products' %}?category={{ c.name }}">
