--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -114,7 +114,7 @@
                                 <input type="submit" class="btn btn-black rounded-0 text-uppercase mt-5"
                                     value="Add to Bag">
 
-                                <a href="{% url 'toggle_wishlist' product.id %}" class="mt-5 ml-3">
+                                <a href="{% url 'toggle_wishlist' product.id request.path %}" class="mt-5 ml-3">
                                     {% if  product not in wishlist_items %}
                                     <div class="text-black wishlist-icon" title="Add to wishlist">
                                         <i class="far fa-star fa-3x"></i>
