--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -58,6 +58,17 @@
                 <a href="{% url 'products' %}?category=tech_gadgets" class="dropdown-item ">Tech / Gadgets</a>
             </div>
         </li>
+        <li class="nav-item dropdown">
+            <a class="logo-font font-weight-bold nav-link text-black mr-5" href="#" id="outdoor-lifestyle-link"
+                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Brands
+            </a>
+            <div class="dropdown-menu border-0" aria-labelledby="outdoor-lifestyle-link">
+                {% for brand in brands %}
+                <a href="{% url 'products' %}?brand={{ brand }}" class="dropdown-item">{{ brand }}</a>
+                {% endfor %}
+            </div>
+        </li>
 
     </ul>
 </div>
