--- a/wishlist/templates/wishlist/wishlist.html
+++ b/wishlist/templates/wishlist/wishlist.html
@@ -54,7 +54,8 @@
         {% endfor %}
 
         {% else %}
-        <p>No wishlist</p>
+        <p><strong>Nothing saved to your wishlist. <br>
+                Hit the <i class="far fa-star fa-lg"></i> on any item to save it.</strong></p>
         {% endif %}
     </div>
 
