--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -65,7 +65,31 @@
                 </div>
             </div>
             <div class="row">
-                {% for product in products %}
+                <div class="col-12">
+                    <div class="pagination mb-2">
+                        <span class="step-links">
+                            {% if page_obj.has_previous %}
+                            <a href="?page=1">&laquo; first</a>
+                            <a href="?page={{ page_obj.previous_page_number }}">previous</a>
+                            {% endif %}
+
+                            <span class="current">
+                                Page {{ page_obj.number }} of {{ page_obj.paginator.num_pages }}.
+                            </span>
+
+                            {% if page_obj.has_next %}
+                            <a href="?page={{ page_obj.next_page_number }}">next</a>
+                            <a href="?page={{ page_obj.paginator.num_pages }}">last &raquo;</a>
+                            {% endif %}
+                        </span>
+                    </div>
+                </div>
+
+
+            </div>
+
+            <div class="row">
+                {% for product in page_obj %}
 
                 {% include "products/includes/product_card.html" %}
 
