--- a/products/templates/products/delete_product_variation.html
+++ b/products/templates/products/delete_product_variation.html
@@ -21,7 +21,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <h5 class="text-muted">Delete Product</h5>
+            <h5 class="text-muted">Delete Product Variation</h5>
             <hr>
         </div>
     </div>
@@ -30,7 +30,8 @@
             <form method="POST">
                 {% csrf_token %}
                 <div class="">
-                    <p>Are you sure you want to delete {{ product.name|title }}?</p>
+                    <p>Are you sure you want to delete variation <strong>{{ variation.name|title }}</strong> from
+                        {{ product.name|title }}?</p>
                     <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                     <button class="btn btn-black rounded-0" type="submit">Yes, Delete!</button>
                 </div>
