--- a/products/templates/products/edit_product_variation.html
+++ b/products/templates/products/edit_product_variation.html
@@ -20,7 +20,7 @@
     </div>
     <div class="row">
         <div class="col-12 col-md-6">
-            <h5 class="text-muted">Add a Product</h5>
+            <h5 class="text-muted">Update Product Variation</h5>
             <hr>
         </div>
         <div class="d-none d-md-block col-md-6">
@@ -32,7 +32,10 @@
 
     <div class="row">
         <div class="col-12 col-md-6">
-            <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2"
+            <span>
+                <p> <strong>{{ product.name }}</strong></p>
+            </span>
+            <form method="POST" action="{% url 'add_product_variation' product.id %}" class="form mb-2"
                 enctype="multipart/form-data">
                 {% csrf_token %}
                 {% for field in form %}
@@ -42,12 +45,16 @@
                 {{ field }}
                 {% endif %}
                 {% endfor %}
+
                 <div class="text-right">
-                    <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
-                    <button class="btn btn-black rounded-0" type="submit">Update Product</button>
+                    <a class="btn btn-outline-black rounded-0" href="{% url 'edit_product' product.id %}">Back to
+                        Product</a>
+                    <button class="btn btn-black rounded-0" type="submit">Update Product Variation</button>
                 </div>
-            </form>
+
         </div>
+        </form>
+
         <div class="col-12 col-md-6">
 
             <h5 class="text-muted d-md-none">Product Variations</h5>
@@ -57,8 +64,10 @@
             <table class="table table-sm">
                 <thead>
                     <tr>
-                        <th>Catergory</th>
+                        <th>Category</th>
                         <th>Variation</th>
+                        <th>Edit</th>
+                        <th>Delete</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -72,6 +81,15 @@
                             {{ var.name|capfirst }}
                         </td>
 
+                        <td>
+                            <a class="text-info" href="{% url 'edit_product_variation' var.id %}">Edit</a>
+                        </td>
+
+                        <td>
+                            <a class="text-danger"
+                                href="{% url 'delete_product_variation' var.id product.id %}">Delete</a>
+                        </td>
+
                     </tr>
                     {% endfor %}
                 </tbody>
@@ -79,12 +97,6 @@
             {% else %}
             <p>No variations of this product found.</p>
             {% endif %}
-
-            <div class="text-right">
-                <a class="btn btn-black rounded-0" href="{% url 'add_product_variation' product.id %}">Manage Product
-                    Variations</a>
-
-            </div>
         </div>
     </div>
 </div>
